# bs-player-app

./: .eslintrc.cjs  .gitignore  .prettierignore  .prettierrc  bun.lockb  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/actions/cache_cargo/: action.yml
.github/workflows/: rust_ci.yml
.husky/: pre-commit
.scaffdog/: features.md  page.md  view.md
.storybook/: main.ts  preview.tsx
docs/: db_er.plantuml
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/bindings/: BsInfoDat.ts  ChroMapper.ts  ColorLeft.ts  ColorRight.ts  CustomData.ts  CustomData2.ts  DifficultyBeatmap.ts  DifficultyBeatmapSet.ts  Editors.ts  MapsDirPath.ts  Mma2.ts  Settings.ts  SongData.ts  SongDataMapDirOnly.ts  SongInfoDat.ts
src-tauri/icons/: icon.icns
src-tauri/migrations/: 20240309083907_init.sql  20240310081957_url_datas.sql
src-tauri/src/: config.rs  database.rs  get_musc_files.rs  handler.rs  main.rs
src-tauri/src/database/: db.rs  maps_path.rs  mod.rs  songs.rs
src-tauri/src/types/: info_dat_types.rs  mod.rs
src/Components/: ChangeLang.tsx  MusicPlayer.tsx  TitileNavBar.tsx
src/Components/Provider/: I18n.tsx
src/Components/features/MusicPlayer/: MusicPlayer.tsx  useMusicPlayer.ts
src/Components/features/RequireMapPath/: RequireMapPath.tsx  index.ts  useRequireMapPath.ts
src/Components/features/VolemeSeek/: VolemeSeek.stories.tsx  VolemeSeek.tsx  index.ts
src/Components/icons/: F7PlayFill.tsx  Fa6RegularImage.tsx
src/Components/ui/: avatar.tsx  button.tsx  center.tsx  slider.tsx
src/Components/views/: Loading.tsx  MusicItem.tsx  MusicList.tsx  TitileNavBar.tsx
src/hooks/: appInitHook.tsx  useMapPathHook.ts
src/i18n/: en.ts  formatters.ts  i18n-react.tsx  i18n-types.ts  i18n-util.async.ts  i18n-util.sync.ts  i18n-util.ts  i18n.ts  ja.ts
src/i18n/en/: index.ts
src/i18n/ja/: index.ts
src/lib/: MapPathHandler.ts  themes.ts  types.ts  utils.ts
src/lib/jotai/: Player.Jotai.ts  jotai.ts
src/routes/: MainPage.tsx  SetUpPage.tsx  SettingPage.tsx
src/stories/: Button.stories.ts  Header.stories.ts  MusicList.stories.tsx  Page.stories.ts
(+13 files in other folders)
