[package]
name = "bsm-player-app"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "api-all"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_derive = "1.0.197"
ts-rs = "7.1.1"
hound = "3.5.1"

tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
window-shadows = { git = "https://github.com/tauri-apps/window-shadows.git" }
sqlx = { version = "0.7", features = ["sqlite", "json", "time", "runtime-tokio-rustls", "migrate"] }
tokio = { version = "1", features = ["full"] }



log = "0.4.21"
lofty = "0.18.2"
futures = "0.3.30"
directories = "5.0.1"
dunce = "1.0.4"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[dependencies.tauri-plugin-sql]
git = "https://github.com/tauri-apps/plugins-workspace"
branch = "v1"
features = ["sqlite"] # or "postgres", or "mysql"
